<resources>
    <string name="action_settings">Settings</string>
    <string name="PREFERENCE_KEY">com.mc1.dev.goapp.PREFERENCE_KEY</string>

    <!-- Activity labels start here -->
    <string name="title_app_name">GoApp</string>
    <string name="title_activity_online_game">New Online Game</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="title_activity_activity_load_game">Load Game</string>
    <string name="title_activity_activity_record_game">Record Game</string>
    <!-- Activity labels end here -->

    <!-- ActivityMain starts here -->
    <string name="new_online_game">New Online Game</string>
    <string name="new_game">New Game</string>
    <string name="new_record">New Record</string>
    <string name="load_game">Load Game</string>
    <string name="show_tutorial">Show Tutorial</string>
    <string name="dialog_tutorial_title">Tutorial</string>
    <string name="dialog_tutorial_content">Go is a fascinating board game played by two players.
        Due to its invention approximately 4000 years ago it is the oldest board game that is still played today.
        Go is usually played with black and white stones on a 19x19 grid board, though smaller board sizes like 13x13 and 9x9 are also very common.
        The two opponents take turns at placing the stones on the empty intersections of the grid on the board.
        Apart from capturing enemy stones it is not possible to move already placed stones.
        If you want to know more about the game and its rules the following web pages are recommended:
        \n
        <a href="http://learnbaduk.com/index.html">http://learnbaduk.com/index.html</a>
        \n
        <a href="http://361points.com/whatisgo/">http://361points.com/whatisgo/</a>
    </string>
    <!-- ActivityMain ends here -->

    <!-- ActivityOnlineGame starts here -->
    <string name="label_nickname">Nickname</string>
    <string name="label_rank">Rank</string>
    <string name="searchForOpponentButton">Search for opponent</string>
    <!-- ActivityOnlineGame ends here -->

    <!-- ActivityNewGame starts here -->
    <string name="extended_options_switch_off">Show extended options</string>
    <string name="extended_options_switch_on">Hide extended options</string>
    <string name="randomBnW_switch_off">Choose black and white</string>
    <string name="randomBnW_switch_on">Random colors</string>
    <string name="label_black">Black</string>
    <string name="label_white">White</string>
    <string name="label_player_1">Player 1</string>
    <string name="label_player_2">Player 2</string>
    <string name="label_board_size">Board Size</string>
    <string name="label_time_mode">Time Mode</string>
    <string name="label_komi">Komi</string>
    <string name="label_handicap">Handicap</string>
    <string name="label_amountOfHandicapStones">Handicap stones: </string>
    <string name="startGameButton">Start Game</string>
    <!-- ActivityNewGame ends here -->

    <!-- ActivityPlay starts here -->
    <string name="label_time_initial">Time Left \r\nready</string>
    <string name="label_time">Time Left \r\n</string>
    <string name="label_prisoners">Prisoners</string>
    <string name="label_prisoners_initial">Prisoners \r\n0</string>
    <string name="label_resign">Resign</string>
    <string name="label_pass">Pass</string>
    <string name="dialog_suicide_title">Suicide</string>
    <string name="dialog_suicide_content">This move is a suicide. The Stone will not be placed on the board.</string>
    <string name="end_black_1">Schwarz hat mit</string>
    <string name="end_part_2">Punkten gewonnen!</string>
    <string name="end_white_1">Weiß hat mit</string>
    <string name="end_title">hat gewonnen!</string>
    <string name="end_title_black">Schwarz hat gewonnen!</string>
    <string name="end_title_white">Weiß hat gewonnen!</string>
    <!-- ActivityPlay ends here -->


    <!-- ActivityRecord starts here -->
    <string name="label_prisoners_black_initial">Black\r\nPrisoners \r\n0</string>
    <string name="label_prisoners_white_initial">White\r\nPrisoners \r\n0</string>
    <string name="label_prisoners_black">Black\r\nPrisoners</string>
    <string name="label_prisoners_white">White\r\nPrisoners</string>
    <string name="label_save">Save</string>
    <string name="title_successful_save">Saving successful</string>
    <string name="dialog_on_save_completed">The game has been successfully saved as</string>
    <string name="description_forward_button">Forward Button</string>
    <string name="description_backward_button">Backward Button</string>
    <string name="title_error_message">Error</string>
    <!-- ActivityRecord ends here -->

    <!-- ActivityOnlineGame starts here -->
    <string name="text_on_loading">Searching for Opponent</string>
    <!-- ActivityOnlineGame ends here -->

    <!-- ActivityPlayOnline starts here -->
    <string name="title_activity_play_online">ActivityPlayOnline</string>
    <string name="resign_message">Unfortunately you lost. Next time will surely work.</string>
    <string name="submit_button">Submit turn</string>
    <!-- ActivityPlayOnline ends here -->

    <!-- place for dummy strings -->
    <string name="dummy">Ich bin ein Dummy.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_get_move">ActivityGetMove</string>

</resources>
