<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.mc1.dev.goapp.ActivityRecordGame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="20dp">

        <ImageButton
            android:id="@+id/backwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_backward_button"
            android:src="@drawable/ic_arrow_backward"
            android:onClick="skipBackward" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/forwardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/description_forward_button"
            android:src="@drawable/ic_arrow_forward"
            android:onClick="skipForward" />

    </LinearLayout>

    <com.mc1.dev.goapp.BoardView
        android:id="@+id/recordBoardView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:id="@+id/actionBarRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true"
        android:layout_alignParentBottom="true">


        <TextView
            android:id="@+id/blackPrisonersView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_prisoners_black_initial" />

        <TextView
            android:id="@+id/whitePrisonersView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_prisoners_white_initial" />

        <Button
            android:id="@+id/passButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/label_pass"
            android:onClick="passMove" />

        <Button
            android:id="@+id/savenButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/label_save"
            android:onClick="save" />


    </LinearLayout>


</RelativeLayout>
