<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainBoardBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActivityMain"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/ButtonStartNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:onClick="startNewGameView"
        style="?android:attr/borderlessButtonStyle" />

    <View
        android:id="@+id/OptionsSeparator1"
        style="@style/Divider"
        android:background="@color/darker_gray"
        android:layout_below="@id/ButtonStartNewGame" />

    <Button
        android:id="@+id/ButtonStartNewRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_record"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/OptionsSeparator1"
        android:layout_centerHorizontal="true"
        android:onClick="startRecordView"/>

    <View
        android:id="@+id/OptionsSeparator2"
        style="@style/Divider"
        android:background="@color/darker_gray"
        android:layout_below="@id/ButtonStartNewRecord" />

    <Button
        android:id="@+id/ButtonLoadGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_game"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/OptionsSeparator2"
        android:layout_centerHorizontal="true"
        android:onClick="startLoadGameView"/>

    <View
        android:id="@+id/OptionsSeparator3"
        style="@style/Divider"
        android:background="@color/darker_gray"
        android:layout_below="@id/ButtonLoadGame" />

    <Button
        android:id="@+id/ButtonShowTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_tutorial"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="tutorialDialog"
        android:layout_below="@id/OptionsSeparator3"/>

    <View
        android:id="@+id/OptionsSeparator4"
        style="@style/Divider"
        android:background="@color/darker_gray"
        android:layout_below="@id/ButtonShowTutorial" />

</RelativeLayout>
